GNOME Bugzilla – Bug 592956
Can't revoke subkey
Last modified: 2010-02-22 04:34:58 UTC
Forwarded from Launchpad (https://bugs.launchpad.net/bugs/228876) Steps to reproduce: 1. Select gpg-key -> Properties 2. On Details-Tab choose a subkey 3. Revoke, Superseded - blank comment field. Seahorse gives dialog: Couldn't revoke subkey General error And .xsession-errors shows: ** (seahorse:6771): CRITICAL **: file seahorse-gpgme-key-op.c: line 1759 (rev_subkey_transit): should not be reached
This is important for the release. I'll have a look at it tomorrow.
Fixed! :) commit ef5874328c8a3155e8f38be3ec396f9583b9ba1b Author: Pablo Castellano <pablog@src.gnome.org> Date: Sat Feb 20 18:14:34 2010 +0100 Revoking subkey now works again. Also minor documentation changes. https://bugzilla.gnome.org/show_bug.cgi?id=592956
It is strange. I had never revoked a subkey with seahorse and I wonder if it really worked once in the past. If so, something has changed in the communication with gpg and I could have broken again compatibility with older versions :?
Pablo, thanks for taking care of this. It was on my todo list. I just tested it and I'm using gpg 1.4.9. If it also works for 2.x then I think we're ok. I think I'm going to look at changing the default subkey created to RSA 2048, but that might count as a UI change.
(In reply to comment #4) > Pablo, thanks for taking care of this. It was on my todo list. I just tested > it and I'm using gpg 1.4.9. If it also works for 2.x then I think we're ok. I > think I'm going to look at changing the default subkey created to RSA 2048, but > that might count as a UI change. Yes, it works with gpg 1.4.9 and 2.0.12 at least :) I support changing to create rsa 2048 subkeys by default. Will you ask for the approval? What about changing configure.in to use by default gnupg2 if it's found? Is it well tested? I have found that sometimes gpg freezes the UI and with gpg2 I didn't get that impression: 106: AC_PATH_PROGS(GNUPG, [gpg2 gpg], no)
Because there are two different kinds of RSA subkey that can be generated -- RSA_SIGN, RSA_ENCRYPT -- this will require more thought. In the meantime, I have changed the default subkey lengths to DSA_MAX and MAX_LENGTH / 2. No UI freeze break required. commit dd47282ec4dfc4d7319004e3ea1810d4667b881c Author: Adam Schreiber <sadam@gnome.org> Date: Sun Feb 21 18:08:57 2010 -0500 Change default key lengths for subkey generation.
In fact, I was wondering if what you did (change something in the UI from the source code) is considered an UI change. :) But why MAX_LENGTH / 2 ?
Okay I have read it in https://bugzilla.gnome.org/show_bug.cgi?id=605497 ;)