Revoking subkey now works again. Also minor documentation changes.

https://bugzilla.gnome.org/show_bug.cgi?id=592956